# movie-watchlist-api--by-Moulodi

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/core/: database.py
app/models/: __init__.py  movie.py
app/schemas/: __init__.py  movie.py
src/: main.py
src/api/v1/endpoints/: movies.py
src/core/: settings.py
src/db/: session.py
src/models/: movie.py
src/repositories/: movie_repository.py
src/schemas/: movie.py
src/services/: movie_service.py
